samples/_failures_safe/1761706236_23e080_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce267eda.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ce267eda.c:153: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ce267eda.c:152:13: error: expected declaration or statement at end of input
  152 |             if
      |             ^~
./samples/SAFE/__tmp_ce267eda.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce267eda.c:152:13: error: expected declaration or statement at end of input
